--- a/GestionPOA/App/Views/indicadores/index.html
+++ b/GestionPOA/App/Views/indicadores/index.html
@@ -1,62 +1,125 @@
-﻿<div class="row" ng-controller="IndicadoresController as demo">
-
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header card-header-icon" data-background-color="green">
-                <i class="material-icons">list</i>
+﻿<div class="row" ng-controller="IndicadoresController as vm">
+    <div class="row">
+        <div class="col-lg-6 col-md-12">
+            <div class="card">
+                <div class="card-header card-header-text" data-background-color="orange">
+                    <h4 class="card-title">Estrategias</h4>
+                </div>
+                <div class="card-content table-responsive">
+                    <table class="table table-hover">
+                        <thead class="text-warning">
+                        <th>Descripción</th>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="estrategias in vm.listadoEstrategias" ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)">
+                                <td>{{estrategias.Descripcion}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="card-content">
-                <h4 class="card-title"><a class="ui teal tag label">SUBSISTEMAS</a></h4>
-                <div class="toolbar row">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="form-group">
-                                <div class="ui label">
-                                    <i class="pin icon"></i> Total de registros: {{vm.totalregistros}}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4" style="padding-bottom:20px;">
-                            <div class="form-group">
-                                <div class="ui icon input pull-right">
-                                    <input type="text" placeholder="Buscar..." class="form-control pull-right" ng-model="searchText">
-                                    <i class="circular search link icon"></i>
-                                </div>
-                            </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+            <div class="card">
+                <div class="card-header card-header-tabs" data-background-color="green">
+                    <div class="nav-tabs-navigation">
+                        <div class="nav-tabs-wrapper">
+                            <a ng-show="vm.appstate =='showAdd'" class="ui olive label" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaIndicador()"><i class="add icon"></i>Indicador</a>
+                            <span class="nav-tabs-title"><b>ESTRATEGIA:</b> {{vm.estrategia }}</span>
+                            <ul class="nav nav-tabs" data-tabs="tabs"></ul>
                         </div>
                     </div>
                 </div>
-                
-                        
-                <table ng-table="demo.tableParams" class="table table-bordered table-hover col-md-12" >
-                    <colgroup>
-                        <col width="50%" />
-                        <col width="50%" />
-                        <col width="20%" />
-                    </colgroup>
-                    <tr class="ng-table-group" ng-repeat-start="group in $groups">
-                        <td colspan="3" class="text-success">
-                            <a href="" class="text-success" ng-click="group.$hideRows = !group.$hideRows">
-                                <span class="glyphicon" ng-class="{ 'glyphicon-chevron-right': group.$hideRows, 'glyphicon-chevron-down': !group.$hideRows }"></span>
-                                <strong>{{ group.value }}</strong>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr ng-hide="group.$hideRows" ng-repeat="u in demo.data" ng-repeat-end>
-                        <td sortable="'Estrategias'" data-title="'Estrategias'" groupable="'estrategias'" ng-if="false">
-                            {{ u.uid }}
-                        </td>
-                        <td sortable="'Indicadores'" data-title="'Indicadores'" groupable="'indicadores'">
-                            {{ u.name }}
-                        </td>
-                        <td sortable="'Area'" data-title="'Age'" groupable="'age'">
-                            {{ u.area }}
-                        </td>
-                    </tr>
-                </table>
+                <div class="card-content">
+                    <table class="table">
+                        <thead class="text-warning">
+                        <th>Indicadores</th>
+                        <th>Acciones</th>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="indicadores in vm.listadoIndicadores">
+                                <td>{{indicadores.Descripcion}}</td>
+                                <td title="'Acciones'" class="td-actions text-center">
+                                    <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModalUpdate" ng-click="vm.ventanaModalIndicadores(indicadores)" class="btn btn-success btn-round">
+                                        <i class="material-icons">edit</i>
+                                    </button>
+                                    <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteIndicador(indicadores.IndicadorId, $index)">
+                                        <i class="material-icons">close</i>
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
+    <!-- MODAL INSERT -->
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Agregar Indicador ::</h4>
+                </div>
+                <form name="addIndicadoresForm" class="ui form" ng-submit="vm.addIndicador()" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group label-floating">
+                            <label class="control-label"><span class="text-success"><b>ESTRATEGIA: </b> </span> {{vm.estrategia | uppercase}} </label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">DESCRIPCIÓN DEL INDICADOR</label>
+                            <div class="form-group">
+                                <textarea type="text" class="form-control" ng-model="vm.modalIndicadores.Descripcion" required></textarea>
+                            </div>
+                        </div>
 
-    
+                        <input type="hidden" ng-model="vm.modalIndicadores.EstrategiasId" ng-value="vm.modalIndicadores.EstrategiasId">
+                        <input type="hidden" ng-model="vm.modalIndicadores.eliminado" ng-value="vm.modalIndicadores.eliminado = 0">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="addIndicadoresForm.$invalid">Registrar <i class="add icon"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL INSERT -->
+    <!-- MODAL UPDATE -->
+    <div id="myModalUpdate" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Actualizar Indicador ::</h4>
+                </div>
+                <form name="updateIndicadoresForm" class="ui form" ng-submit="vm.updateIndicador()" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group label-floating">
+                            <label class="control-label"><span class="text-success"><b>ESTRATEGIA: </b> </span> {{vm.estrategia | uppercase}}</label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">DESCRIPCIÓN DEL INDICADOR</label>
+                            <div class="form-group">
+                                <textarea type="text" class="form-control" ng-model="vm.modalIndicadores.Descripcion" required></textarea>
+                            </div>
+                        </div>
+                        <input type="hidden" ng-model="vm.modalIndicadores.IndicadorId" ng-value="vm.modalIndicadores.IndicadorId">
+                        <input type="hidden" ng-model="vm.modalIndicadores.EstrategiasId" ng-value="vm.modalIndicadores.EstrategiasId">
+                        <input type="hidden" ng-model="vm.modalIndicadores.eliminado" ng-value="vm.modalIndicadores.eliminado = 0">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateIndicadoresForm.$invalid">Actualizar <i class="add icon"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL UPDATE -->
 </div>
