--- a/GestionPOA/Views/Shared/_Layout.cshtml
+++ b/GestionPOA/Views/Shared/_Layout.cshtml
@@ -56,15 +56,9 @@
                     </div>
                 </div>
                 <ul class="nav">
-                    <li class="active">
-                        <a href="dashboard.html">
-                            <i class="material-icons">dashboard</i>
-                            <p>Resumen</p>
-                        </a>
-                    </li>
                     <li>
                         <a data-toggle="collapse" href="#subsistema">
-                            <i class="material-icons">apps</i>
+                            <i class="material-icons">dialpad</i>
                             <p>
                                 Subsistemas
                                 <b class="caret"></b>
@@ -72,15 +66,15 @@
                         </a>
                         <div class="collapse" id="subsistema">
                             <ul class="nav">
-                                <li>
-                                    <a href="#!/Subsistema">Nuevo</a>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Subsistema"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li>
                         <a data-toggle="collapse" href="#objetivoestrategico">
-                            <i class="material-icons">apps</i>
+                            <i class="material-icons">assistant_photo</i>
                             <p>
                                 O. E. Institucional
                                 <b class="caret"></b>
@@ -88,31 +82,31 @@
                         </a>
                         <div class="collapse" id="objetivoestrategico">
                             <ul class="nav">
-                                <li>
-                                    <a href="#!/Objetivo/Estrategico">Nuevo</a>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Objetivo/Estrategico"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li>
                         <a data-toggle="collapse" href="#objetivoespecifico">
-                            <i class="material-icons">apps</i>
+                            <i class="material-icons">golf_course</i>
                             <p>
-                                O. Estratégico
+                                O. Especifico
                                 <b class="caret"></b>
                             </p>
                         </a>
                         <div class="collapse" id="objetivoespecifico">
                             <ul class="nav">
-                                <li>
-                                    <a href="#!/Objetivo/Especifico">Nuevo</a>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Objetivo/Especifico"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li>
                         <a data-toggle="collapse" href="#indicadores">
-                            <i class="material-icons">apps</i>
+                            <i class="material-icons">timeline</i>
                             <p>
                                 Indicadores
                                 <b class="caret"></b>
@@ -120,8 +114,8 @@
                         </a>
                         <div class="collapse" id="indicadores">
                             <ul class="nav">
-                                <li>
-                                    <a href="#!/Estrategia/Indicadores">Nuevo</a>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Estrategia/Indicadores"> <i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                             </ul>
                         </div>
