HU12  T12.01 Realizar diseño para el CRUD

--- a/GestionPOA/Views/Shared/_Layout.cshtml
+++ b/GestionPOA/Views/Shared/_Layout.cshtml
@@ -120,6 +120,22 @@
                             </ul>
                         </div>
                     </li>
+                    <li>
+                        <a data-toggle="collapse" href="#acciones">
+                            <i class="material-icons">text_format</i>
+                            <p>
+                                Acciones
+                                <b class="caret"></b>
+                            </p>
+                        </a>
+                        <div class="collapse" id="acciones">
+                            <ul class="nav">
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Metas/Acciones"> <i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
