HU12 T12.02 Codifcar las funcionalidades del CRUD

--- a/GestionPOA/App/Views/indicadores/index.html
+++ b/GestionPOA/App/Views/indicadores/index.html
@@ -12,7 +12,7 @@
                         </thead>
                         <tbody>
                             <tr ng-repeat="estrategias in vm.listadoEstrategias" ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)">
-                                <td>{{estrategias.Descripcion}}</td>
+                                <td style="cursor:pointer;" >{{estrategias.Descripcion}}</td>
                             </tr>
                         </tbody>
                     </table>
