login de usuario del sprint 3

--- a/GestionPOA/App/Views/acciones/index.html
+++ b/GestionPOA/App/Views/acciones/index.html
@@ -100,7 +100,7 @@
                 <form name="updateAccionesForm" class="ui form" ng-submit="vm.updateAccion()" novalidate>
                     <div class="modal-body">
                         <div class="form-group label-floating">
-                            <label class="control-label"><span class="text-success"><b>ESTRATEGIA: </b> </span> {{vm.meta | uppercase}}</label>
+                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{vm.meta | uppercase}}</label>
                         </div>
                         <br />
                         <div class="form-group label-floating">
