--- a/GestionPOA/App/Views/subsistema/index.html
+++ b/GestionPOA/App/Views/subsistema/index.html
@@ -1,4 +1,5 @@
-﻿<div ng-controller="SubsistemasController as vm">
+﻿
+<div ng-controller="SubsistemasController as vm">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header card-header-icon" data-background-color="green">
