--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -107,6 +107,22 @@
                         </div>
                     </li>
                     <li>
+                        <a data-toggle="collapse" href="#planificacion">
+                            <i class="material-icons">card_travel</i>
+                            <p>
+                                Planificación
+                                <b class="caret"></b>
+                            </p>
+                        </a>
+                        <div class="collapse" id="planificacion">
+                            <ul class="nav">
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Planificacion"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
                         <a data-toggle="collapse" href="#indicadores">
                             <i class="material-icons">timeline</i>
                             <p>
