--- a/GestionPOA/App/Views/indicadores/index.html
+++ b/GestionPOA/App/Views/indicadores/index.html
@@ -9,10 +9,12 @@
                     <table class="table table-hover">
                         <thead class="text-warning">
                         <th>Descripción</th>
+                        <th> </th>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="estrategias in vm.listadoEstrategias" ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)">
-                                <td style="cursor:pointer;" >{{estrategias.Descripcion}}</td>
+                            <tr ng-repeat="estrategias in vm.listadoEstrategias">
+                                <td ng-click="vm.cargarIndicadores(estrategias.EstrategiasId,estrategias.Descripcion)" style="cursor:pointer;" >{{estrategias.Descripcion}}</td>
+                                <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleEstrategia" style="cursor:pointer;" ng-click="vm.detalleEstrategias(estrategias.EstrategiasId)" class="text-success">ver más</span></td>
                             </tr>
                         </tbody>
                     </table>
@@ -122,4 +124,39 @@
         </div>
     </div>
     <!-- END MODAL UPDATE -->
+    <!-- MODAL DETALLE META -->
+    <div id="myModalDetalleEstrategia" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Detalle de la Estrategia ::</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="ui relaxed divided list">
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">OBJETIVO ESTRATEGICO</a>
+                                <div class="description">{{  vm.detallesEstrategia.ObjetivoEstrategico }}</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">OBJETIVO ESPECIFICO</a>
+                                <div class="description">{{ vm.detallesEstrategia.ObjetivoEspecifico}}</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL DETALLE META -->
 </div>
