--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -107,17 +107,17 @@
                         </div>
                     </li>
                     <li>
-                        <a data-toggle="collapse" href="#planificacion">
+                        <a data-toggle="collapse" href="#estrategia">
                             <i class="material-icons">card_travel</i>
                             <p>
-                                Planificación
+                                Estrategias
                                 <b class="caret"></b>
                             </p>
                         </a>
-                        <div class="collapse" id="planificacion">
+                        <div class="collapse" id="estrategia">
                             <ul class="nav">
                                 <li style="padding-left:12px;">
-                                    <a href="#!/Planificacion"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
+                                    <a href="#!/Planificacion/Estrategia"><i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                             </ul>
                         </div>
