HU11 T11.01 Realizar el diseño para el CRUD

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -148,7 +148,7 @@
                         <div class="collapse" id="metas">
                             <ul class="nav">
                                 <li style="padding-left:12px;">
-                                    <a href="#!/Metas"> <i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
+                                    <a href="#!/Metas/Nuevo"> <i class="material-icons" style="color: #4caf50;">add</i>Nuevo</a>
                                 </li>
                                 <li style="padding-left:12px;">
                                     <a href="#!/Metas/Planificacion"> <i class="material-icons" style="color: #4caf50;">card_travel</i>Planificación</a>
