--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="myDivUser" class="hidden" data-value="@Request.RequestContext.HttpContext.Session["user"]"></div>
+                <div id="myDivDepartmentID" class="hidden" data-value="@Request.RequestContext.HttpContext.Session["department"]"></div>
                 <ul class="nav">
                     <li>
                         <a data-toggle="collapse" href="#subsistema">
