--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -10,6 +10,7 @@
                         <table class="table table-hover">
                             <thead class="text-warning">
                                 <tr class="text-center">
+                                    <th rowspan="2">Cualitativo</th>
                                     <th rowspan="2" width="60%">Metas</th>
                                     <th colspan="4">Programación Trimestral en % de la meta</th>
                                     <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
@@ -19,7 +20,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-if="vm.deparmentID!=2" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                    <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true"/></td>
                                     <td>{{Programacion.Metas}}</td>
                                     <td class="text-center">
                                         <div class="ui input">
@@ -47,42 +49,64 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr ng-if="vm.deparmentID==2" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                    <td><label>Cualitativo: <input type="checkbox" ng-model="checked" ng-init="checked=true" /></label></td>
-                                    <td>{{Programacion.Metas}}</td>
-                                    <td class="text-center">
-                                        <select ng-model="select1" ng-init="selected=1">
-                                            <option value="1">Cuantitativo</option>
-                                            <option value="2" ng-selected="selected">Satisfactorio</option>
-                                            <option value="3">Medio Satisfactorio</option>
-                                            <option value="4">Deficiente</option>
-                                        </select>
+                                <tr ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                   <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
+                                          <input type="checkbox" ng-model="checked" ng-init="checked=false" />
+                                    </td>-->
+                                    <!--<td ng-if="Programacion.I != '110' || Programacion.I != '220' || Programacion.I != '330'">
+                                        <input type="checkbox" ng-model="checked1" ng-init="checked=true" />
+                                    </td>-->
+                                    <td>
+                                        <input type="checkbox" ng-model="checked" ng-init="checked=true"  />
                                     </td>
-                                    <td class="text-center animate-if" ng-if="select1!=Cuantitativo">
+                                  
+                                    <td>{{Programacion.Metas}}</td>
+                                    <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center">
-                                        <select ng-model="select2">
-                                            <option value="1">Satisfactorio</option>
-                                            <option value="1">Medio Satisfactorio</option>
-                                            <option value="1">Deficiente</option>
+                                    <td class="text-center animate-if" ng-if="checked==false">
+                                        <select ng-model="Programacion.I" >
+                                            <option value="110">Satisfactorio</option>
+                                            <option value="220">Medio Satisfactorio</option>
+                                            <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center">
-                                    <td class="text-center">
-                                        <select ng-model="select3">
-                                            <option value="1">Satisfactorio</option>
-                                            <option value="1">Medio Satisfactorio</option>
-                                            <option value="1">Deficiente</option>
+                                    <td class="text-center animate-if" ng-if="checked==true">
+                                        <div class="ui input">
+                                            <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
+                                        </div>
+                                    </td>
+                                    <td class="text-center animate-if" ng-if="checked==false">
+                                        <select ng-model="Programacion.II">
+                                            <option value="110">Satisfactorio</option>
+                                            <option value="220">Medio Satisfactorio</option>
+                                            <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center">
-                                        <select ng-model="select4">
-                                            <option value="1">Satisfactorio</option>
-                                            <option value="1">Medio Satisfactorio</option>
-                                            <option value="1">Deficiente</option>
+                                    <td class="text-center animate-if" ng-if="checked==true">
+                                        <div class="ui input">
+                                            <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
+                                        </div>
+                                    </td>
+                                    <td class="text-center animate-if" ng-if="checked==false">
+                                        <select ng-model="Programacion.III">
+                                            <option value="110">Satisfactorio</option>
+                                            <option value="220">Medio Satisfactorio</option>
+                                            <option value="330">Deficiente</option>
+                                        </select>
+                                    </td>
+                                    <td class="text-center animate-if" ng-if="checked==true">
+                                        <div class="ui input">
+                                            <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
+                                        </div>
+                                    </td>
+                                    <td class="text-center animate-if" ng-if="checked==false">
+                                        <select ng-model="Programacion.IV">
+                                            <option value="110">Satisfactorio</option>
+                                            <option value="220">Medio Satisfactorio</option>
+                                            <option value="330">Deficiente</option>
                                         </select>
                                     </td>
                                     <td class="td-actions text-center">
