--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -12,7 +12,9 @@
                                 <tr class="text-center">
                                     <th rowspan="2">Cualitativo</th>
                                     <th rowspan="2" width="60%">Metas</th>
+                                    <th rowspan="2"> </th>
                                     <th colspan="4">Programación Trimestral en % de la meta</th>
+                                    <th rowspan="2">Presupuesto</th>
                                     <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                 </tr>
                                 <tr>
@@ -23,6 +25,7 @@
                                 <tr ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
                                     <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true"/></td>
                                     <td>{{Programacion.Metas}}</td>
+                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
@@ -41,6 +44,11 @@
                                     <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
+                                        </div>
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="ui input">
+                                            <input size="2" type="text" ng-model="vm.presupuesto" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="td-actions text-center">
@@ -122,4 +130,53 @@
             </div>
         </div>
     </div>
+    <!-- MODAL DETALLE META -->
+    <div id="myModalDetalleMeta" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Detalle de la Meta ::</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="ui relaxed divided list">
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">OBJETIVO ESTRATEGICO</a>
+                                <div class="description">{{ vm.detallesMeta.ObjetivoEstrategico }}</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">OBJETIVO ESPECIFICO</a>
+                                <div class="description">{{ vm.detallesMeta.ObjetivoEspecifico}}</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">ESTRATEGIA</a>
+                                <div class="description">{{ vm.detallesMeta.Estrategia }}</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="large angle right icon"></i>
+                            <div class="content">
+                                <a class="header">INDICADOR</a>
+                                <div class="description">{{ vm.detallesMeta.Indicador}}</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL DETALLE META -->
 </div>
