--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -9,7 +9,7 @@
                     <form name="categoryForm">
                         <table class="table table-hover">
                             <thead class="text-warning">
-                                <tr class="text-center">
+                                <tr class="text-center" style="font-size:13px;">
                                     <th rowspan="2">Cualitativo</th>
                                     <th rowspan="2" width="60%">Metas</th>
                                     <th rowspan="2"> </th>
@@ -17,14 +17,14 @@
                                     <th rowspan="2">Presupuesto</th>
                                     <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                 </tr>
-                                <tr>
+                                <tr style="font-size:13px;">
                                     <th class="text-center" ng-repeat="intervalo in vm.listadoIntervalos">{{intervalo.descripcion}}</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
                                     <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true"/></td>
-                                    <td>{{Programacion.Metas}}</td>
+                                    <td style="font-size:13px;" >{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
                                         <div class="ui input">
@@ -46,18 +46,18 @@
                                             <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center">
+                                    <td class="text-center" style="font-size:12px;">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="vm.presupuesto" numbers-only max="" />
+                                            <input size="10" type="text" ng-model="Programacion.Presupuesto" decimal-only format="currency"/>
                                         </div>
                                     </td>
-                                    <td class="td-actions text-center">
+                                    <td class="td-actions text-center" >
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasProgramacion(Programacion)" class="btn btn-success btn-round">
                                             <i class="material-icons">cached</i>
                                         </button>
                                     </td>
                                 </tr>
-                                <tr ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
                                    <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
                                           <input type="checkbox" ng-model="checked" ng-init="checked=false" />
                                     </td>-->
@@ -68,7 +68,7 @@
                                         <input type="checkbox" ng-model="checked" ng-init="checked=true"  />
                                     </td>
                                   
-                                    <td>{{Programacion.Metas}}</td>
+                                    <td style="font-size:13px;">{{Programacion.Metas}}</td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
