--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -16,6 +16,7 @@
                                     <th rowspan="2"> </th>
                                     <th colspan="4">Ejecución Trimestral en % de la meta</th>
                                     <th rowspan="2">Presupuesto</th>
+                                    <th rowspan="2">Observación</th>
                                     <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                 </tr>
                                 <tr style="font-size:13px;">
@@ -52,6 +53,9 @@
                                         <div class="ui input">
                                             <input size="10" type="text" ng-model="Ejecucion.P_Ejecutado" decimal-only format="currency" />
                                         </div>
+                                    </td>
+                                    <td class="text-center" style="font-size:12px;">
+                                        <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.addObservacion()" class="text-success">Añadir</span>
                                     </td>
                                     <td class="td-actions text-center">
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
@@ -126,7 +130,7 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr><td class="text-success" data-loader colspan="4"></td></tr>
+                                <tr><td class="text-success" data-loader colspan="9"></td></tr>
                             </tbody>
                         </table>
                     </form>
@@ -183,4 +187,36 @@
         </div>
     </div>
     <!-- END MODAL DETALLE META -->
+    <!-- MODAL ADD OBSERVACIÓN -->
+    <div id="myModalAddObservacion" class="modal fade">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title text-success">:: Actualizar Observación ::</h4>
+                </div>
+                <form name="updateObservacionForm" class="ui form" ng-submit="vm.updateIndicador()" novalidate>
+                    <div class="modal-body">
+                        <div class="form-group label-floating">
+                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{vm.estrategia | uppercase}}</label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating">
+                            <label class="control-label" style="font-size:12px;">OBSERVACIÓN DE LA META</label>
+                            <div class="form-group">
+                                <textarea type="text" class="form-control" ng-model="vm.observacion" required></textarea>
+                            </div>
+                        </div>
+                       <!-- <input type="hidden" ng-model="vm.modalIndicadores.IndicadorId" ng-value="vm.modalIndicadores.IndicadorId">-->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateObservacionForm.$invalid">Actualizar <i class="refresh icon"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END MODAL ADD OBSERVACIÓN -->
 </div>
