--- a/GestionPOA/Content/assets/css/demo.css
+++ b/GestionPOA/Content/assets/css/demo.css
@@ -63,7 +63,12 @@
     -webkit-transition: all .34s;
     -moz-transition: all .34s;
 }
-
+.uploadIcon {
+    font-size: 17px !important;
+    margin-top: 7px;
+    color: cadetblue;
+    cursor: pointer;
+}
 .fixed-plugin{
     position: fixed;
     top: 180px;
