HU10 T10.01 Realizar diseño para asignar responsables a las metas

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -156,6 +156,9 @@
                                 <li style="padding-left:12px;">
                                     <a href="#!/Metas/Ejecucion"> <i class="material-icons" style="color: #4caf50;">play_circle_filled</i>Ejecución</a>
                                 </li>
+                                <li style="padding-left:12px;">
+                                    <a href="#!/Metas/Asignacion"> <i class="material-icons" style="color: #4caf50;">library_add</i>Asignacion</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
