HU14  T14.02 Codificar la funcionalidad para visualizar el tiempo previsto para alcanzar las metas

--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -30,32 +30,32 @@
                                     <td style="font-size:13px;" >{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.I" ng-disabled="true" />
+                                        <div class="ui center input">
+                                            <input size="2" type="text" ng-model="Programacion.Mes" ng-disabled="true"/>
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        <div class="ui input">
+                                        <div class="ui center input" >
                                             <input size="2" type="text" ng-model="Programacion.I" numbers-only max=""/>
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        <div class="ui input">
+                                        <div class="ui center input">
                                             <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        <div class="ui input">
+                                        <div class="ui center input">
                                             <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        <div class="ui input">
+                                        <div class="ui center input">
                                             <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
-                                        <div class="ui input">
+                                        <div class="ui center input">
                                             <input size="10" type="text" ng-model="Programacion.Presupuesto" decimal-only format="currency"/>
                                         </div>
                                     </td>
@@ -131,7 +131,7 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr><td class="text-success" data-loader colspan="9"></td></tr>
+                                <tr><td class="text-success" data-loader colspan="10"></td></tr>
                             </tbody>
                         </table>
                     </form>
